--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.1.3",
     "semantic-release": "^24.0.0"
   }
 }
