--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.1.3",
-    "semantic-release": "^24.0.0"
+    "semantic-release-preconfigured-conventional-commits": "latest"
   }
 }
