--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "semantic-release-preconfigured-conventional-commits": "latest"
+    "semantic-release-preconfigured-conventional-commits": "^1.1.93"
   }
 }
